--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -73,12 +73,12 @@ h1, h2, h3, h4, h5, h6 {
   border: 8px solid #2c2f3f;
 }
 #header .profile h1 {
-  font-size: 18px;
+  font-size: 18.5px;
   margin: 0;
   padding: 0;
   font-weight: 600;
-  -moz-text-align-last: center;
-  text-align-last: center;
+  -moz-text-align-last: left;
+  text-align-last: left;
   font-family: "Poppins", sans-serif;
 }
 #header .profile h1 a, #header .profile h1 a:hover {
