--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -449,6 +449,7 @@ section {
 # Portfolio
 --------------------------------------------------------------*/
 .portfolio .portfolio-item {
+padding:0;  
 }
 .portfolio #portfolio-flters {
   padding: 0;
