--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -449,7 +449,7 @@ section {
 # Portfolio
 --------------------------------------------------------------*/
 .portfolio .portfolio-item {
-padding:0;  
+  transition: 0.3s; 
 }
 .portfolio #portfolio-flters {
   padding: 0;
