--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -197,11 +197,14 @@ h1, h2, h3, h4, h5, h6 {
 #hero:before {
   content: "";
   background: rgba(5, 13, 24, 0.3);
+  width: 100%;
+  height: 100vh;
   position: absolute;
-  bottom: 0;
+ /* bottom: 0;
   top: 0;
   left: 0;
   right: 0;
+  */
   z-index: 1;
 }
 #hero .hero-container {
