--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -196,8 +196,8 @@ h1, h2, h3, h4, h5, h6 {
 }
 #hero:before {
   content: "";
- /*  background: rgba(5, 13, 24, 0.3); */
-   background: rgba(173, 216, 230, 1;
+/*   background: rgba(5, 13, 24, 0.3); */
+ background: rgba(173, 216, 230, 0.5);
   width: 100%;
   height: 100vh;
   position: absolute;
