--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -486,18 +486,18 @@ section {
   transition: 0.3s;
   position: relative;
   overflow: hidden;
-  z-index: 1;
+  z-index: 0;
 }
 .portfolio .portfolio-wrap::before {
   content: "";
   background: rgba(255, 255, 255, 0.5);
-  position: absolute;
+  position: relative;
   left: 0;
   right: 0;
   top: 0;
   bottom: 0;
   transition: all ease-in-out 0.3s;
-  z-index: 2;
+  z-index: 1;
   opacity: 0;
 }
 .portfolio .portfolio-wrap .portfolio-links {
@@ -505,7 +505,7 @@ section {
   left: 0;
   right: 0;
   bottom: -60px;
-  z-index: 3;
+  z-index: 2;
   position: absolute;
   transition: all ease-in-out 0.3s;
   display: flex;
