--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -50,6 +50,72 @@ h1, h2, h3, h4, h5, h6 {
   opacity: 1;
 }
 
+
+/*--------------------------------------------------------------
+# Scroll Down button
+--------------------------------------------------------------*/
+.scroll-down {
+  position: fixed;
+  visibility: hidden;
+  opacity: 0;
+  right: 15px;
+  bottom: 15px;
+  z-index: 996;
+  background: #149ddd;
+  font-size: 16px;
+  color: #fff;
+  width: 90px;
+  height: 40px;
+  border-radius: 50px;
+  transition: all 0.25s;
+}
+.scroll-down i {
+  color: #fff;
+  line-height: 0;
+}
+.scroll-down:hover {
+  background: #2eafec;
+  color: #fff;
+}
+.scroll-down.active {
+  visibility: visible;
+  opacity: 1;
+}
+
+
+/*--------------------------------------------------------------
+# Scroll Down Button Main
+--------------------------------------------------------------*/
+.scroll-down-main {
+  position: fixed;
+  visibility: visible;
+  opacity: 0;
+  right: 15px;
+  bottom: 15px;
+  z-index: 996;
+  background: #149ddd;
+  font-size: 16px;
+  color: #fff;
+  width: 90px;
+  height: 40px;
+  border-radius: 50px;
+  transition: all 0.25s;
+}
+.scroll-down-main i {
+  color: #fff;
+  line-height: 0;
+}
+.scroll-down-main:hover {
+  background: #2eafec;
+  color: #fff;
+}
+.scroll-down-main.active {
+  visibility: visible;
+  opacity: 1;
+}
+
+
+
 /*--------------------------------------------------------------
 # Header
 --------------------------------------------------------------*/
