--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -116,6 +116,92 @@ h1, h2, h3, h4, h5, h6 {
 
 
 
+
+/*--------------------------------------------------------------
+# Scrolly
+--------------------------------------------------------------*/
+
+
+#scrolly {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: 996;
+  display: inline-block;
+  color: #fff;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+  font-weight: 100;
+  font-size: 30px;
+  border-radius: 50px;
+  display: inline-block;
+  font-weight: 100;
+  margin-bottom: 10px;
+  transition: all 0.25s;
+}
+scrolly::after {
+  position: relative;
+  bottom: 0;
+  left: 0;
+  content: '';
+  width: 100%;
+  height: 80%;
+  }
+  
+  #scrolly a {
+    padding-top: 60px;
+  }
+  #scrolly a span {
+    position: absolute;
+    top: 0;
+    left: 50%;
+    width: 46px;
+    height: 46px;
+    margin-left: -23px;
+    border: 1px solid #fff;
+    border-radius: 100%;
+    box-sizing: border-box;
+  }
+  #scrolly a span::after {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    content: '';
+    width: 30px;
+    height: 30px;
+    margin: -12px 0 0 -8px;
+    border-left: 1px solid #fff;
+    border-bottom: 1px solid #fff;
+    -webkit-transform: rotate(-45deg);
+    transform: rotate(-45deg);
+    box-sizing: border-box;
+  }
+  
+  .demo a {
+    position: absolute;
+    bottom: 20px;
+    left: 50%;
+    width:90px;
+    z-index: 996;
+    display: inline-block;
+    -webkit-transform: translate(0, -50%);
+    transform: translate(0, -50%);
+    color: #fff;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    font-weight: 100;
+    font-size: 24px;
+    display: inline-block;
+    font-weight: 100;
+    margin-bottom: 10px;
+    transition: all 0.25s;
+  }
+.demo a:hover {
+  opacity:0.5;
+}
+
 /*--------------------------------------------------------------
 # Scroll Down Button Fancy
 --------------------------------------------------------------*/
@@ -171,7 +257,7 @@ scroll-fancy::after {
   align-items: center;
   justify-content: center;
   font-weight: 100;
-  font-size: 16px;
+  font-size: 24px;
   display: inline-block;
   font-weight: 100;
   margin-bottom: 10px;
